# openkeel

./: .gitignore  AGENTS.md  CALCIFER_TESTFLIGHT.md  CALCIFER_TESTFLIGHT_CHECKLIST.md  CALCIFER_V2_FINAL_STATUS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.pre-v6.bak  README.md  config.example.yaml  constitution.example.yaml  deploy_openkeel.py  github_scout.example.yaml  historical_backfill.py  jagg_firewall.sh  merge_sort_vs_quicksort.md  pyproject.toml  tt.py
.tmp/: calcifer_broker_gemini_review.md  calcifer_broker_sketch.md  calcifer_broker_sketch_v2.md  fractal_rerun_ladder.py  fractal_review_claude.md  fractal_review_codex.md  fractal_review_gemini.md  fractal_token_compare.py  intention_packet_notes.md
docs/: agent_intention_architecture_2026-04-08.md  calcifer_ladder_design_2026-04-08.md  calcifer_ladder_design_v2_2026-04-08.md  calcifer_routing_matrix_2026-04-08.md  calcifers_ladder_handoff_2026-04-07.md  claude_cli_local_llm_audit_2026-04-08.md  fractal-decomposition.md  fractal_method_fix_proposal.md  intention_layer_technical_framework.md  llmos_distro_gap_analysis.md  llmos_ladder_status_2026-04-06.md  llmos_prototype_critique.md  llmos_ui_suggestions.md  llmos_v2.html  llmos_v2.html.bak  opus_persistent_architecture.md  opus_shard_architecture.md  opus_shard_integration.md  token_saver_2026-04-07.md  token_saver_architecture.md  token_saver_audit_playbook.md  token_saver_cache_reduction_ideas.md  token_saver_final.md  token_saver_proxy_audit_2026-04-07.md  token_saver_proxy_results_2026-04-07.md  token_saver_strategy_v2.md  token_saver_v4_5_final.md  token_saver_v4_complete.md  token_saver_v4_report.md  token_saver_v5.md  token_saver_v6_final_pass_2026-04-07.md  token_saver_v6_routing.md  token_saver_v6_session_2026-04-07.md  token_saver_v6_ship_2026-04-07.md
openkeel/: __init__.py  __main__.py  cli.py  config.py  control.py  exec.py  launch.py  observer_daemon.py  treadstone_ui.py
profiles/: audit.yaml  content-pipeline.yaml  data-pipeline.yaml  engineering.yaml  htb-autopwn.yaml  infra-ops.yaml  monitoring.yaml  multi-agent.yaml  security-ops.yaml  web-deploy.yaml  wst.yaml
scripts/: htb_api.py  start_observers.sh  start_observers.sh.bak  token_saver_start.sh  token_saver_stop.sh  token_saver_tunnel.sh
tests/: ab_battery.py  ab_full_battery.py  ab_report_v2.md  ab_results_v2.json  ab_results_v3_flat.json  delphi_cross_pollinate.py  delphi_report.md  delphi_roundtable.py  delphi_v2_report.md  judge_v3.py  rerun_flat_only.py  run_full_pipeline.sh  test_calcifer_v2.py
tools/: agentblue_bridge.py  agentblue_console.py  agentblue_policy.json  ai_radar.py  amyloidosis_corpus.py  amyloidosis_hyphae.py  amyloidosis_ingest.py  callout.py  chemister_prospector.py  chemister_prospects.csv  chemister_prospects.json  chemister_server_jagg.py  deadhand.sh  generate_mask.py  loop_breaker.py  mirror_3d.html  (+31 more)
(+443 files in other folders)
